dataset1235/2025-2/805158916/users/3688932496/executions/71079933_3788368433.log
== RUN (2025-08-13 01:33:00)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = ""

# Impressao de saidas
input()
print("Nome: .var")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Nome: .var
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Nome: .var
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Nome: .var
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Nome: .var
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Nome: .var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:31:11)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = ""

# Impressao de saidas
input()
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
None
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
None
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
None
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
None
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:34:01)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = ""

# Impressao de saidas
input()
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
None
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
None
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
None
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
None
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:32:00)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = ""

# Impressao de saidas
input( print() )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
None
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
None
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
None
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
None
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:38:50)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite seu nome: ")

# Impressao de saidas
print("Você digitou: ",var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Digite seu nome: Você digitou:  Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Digite seu nome: Você digitou:  Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Digite seu nome: Você digitou:  Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Digite seu nome: Você digitou:  Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Digite seu nome: Você digitou:  Teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:33:40)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = ""

# Impressao de saidas
input()
print.var
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print.var
AttributeError: 'builtin_function_or_method' object has no attribute 'var'
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print.var
AttributeError: 'builtin_function_or_method' object has no attribute 'var'
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print.var
AttributeError: 'builtin_function_or_method' object has no attribute 'var'
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print.var
AttributeError: 'builtin_function_or_method' object has no attribute 'var'
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print.var
AttributeError: 'builtin_function_or_method' object has no attribute 'var'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 01:39:10)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite seu nome: ")

# Impressao de saidas
print("Você digitou: ",var)
-- EXECUTION TIME: 
0.015
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Digite seu nome: Você digitou:  Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Digite seu nome: Você digitou:  Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Digite seu nome: Você digitou:  Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Digite seu nome: Você digitou:  Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Digite seu nome: Você digitou:  Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:30:31)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = ""

# Impressao de saidas
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
None
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
None
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
None
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
None
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:32:52)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = ""

# Impressao de saidas
input()
print("Nome: .var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
File "XXXX", line 8
    print("Nome: .var)
          ^
SyntaxError: unterminated string literal (detected at line 8)
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
File "XXXX", line 8
    print("Nome: .var)
          ^
SyntaxError: unterminated string literal (detected at line 8)
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
File "XXXX", line 8
    print("Nome: .var)
          ^
SyntaxError: unterminated string literal (detected at line 8)
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
File "XXXX", line 8
    print("Nome: .var)
          ^
SyntaxError: unterminated string literal (detected at line 8)
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
File "XXXX", line 8
    print("Nome: .var)
          ^
SyntaxError: unterminated string literal (detected at line 8)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:33:32)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = ""

# Impressao de saidas
input()
print(.var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
File "XXXX", line 8
    print(.var)
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
File "XXXX", line 8
    print(.var)
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
File "XXXX", line 8
    print(.var)
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
File "XXXX", line 8
    print(.var)
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
File "XXXX", line 8
    print(.var)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
